Changelog 2021 Feb 25:
    -Minor reformat to guild join messages
    -Discord Slash Commands integration will come as soon as that's officially supported

Changelog 2021 Feb 22:
    -Fixes to on_guild_join
    -on_guild_join now DMs the server owner
    -URL for the BasicBot website has been moved to an environment variable

Changelog 2021 Feb 05:
    -Added command: --server-info
    -Code cleanup and commands categorized in python file

Changelog 2021 Feb 04:
    -Bot prefix changed from '!basic_' to '--'
    -Code cleanup and modularity tweaks

Changelog 2021 Jan 31:
    -Easter egg in banning, can be enabled or disabled mid-run

Changelog 2021 Jan 30:
    -The bot can manage roles if given the right permissions
    -!basic_add_role can be used to give a role (if the user's top role is higher)
    -!basic_remove_role can be used to remove a role (if the user's top role is higher)

Changelog 2021 Jan 29:
    -The bot leaves a voice channel if it is empty, without prompting

Changelog 2021 Jan 28:
    -Added command alias: !basic_add for !basic_queue
    -Added command alias: !basic_next for !basic_skip
    -!basic_play now can do !basic_yt's job too (provided there's nothing playing).
    -Youtube search functionality added - there should be no "invalid URL" messages now

Changelog 2021 Jan 26:
    -Generic 'BasicBot will restart for an update soon!' message added
    -Customizable !basic_announce [PASSWORD] "[MESSAGE]" command added
    -Channel command responses edited: BasicBot responds in channels starting with 'bot' or named 'basicbot'

Changelog 2021 Jan 25:
    -BasicBot was deployed to AWS today.
    -On Voice State Update no longer throws an error

Changelog 2021 Jan 24:
    -!basic_terminate replaces !basicbot_terminate
    -Message and command interpretation speed improved
    -Instead of using force-delete-ids.txt, the bot removes new messages in channels named 'official-complaints'
    -Fixed and optimized 'noot'